--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>欢迎来到武汉</h2>
         <p>武汉是中国中部地区的重要城市，拥有丰富的历史、文化和美食。</p>
         <!-- 添加图片 -->
-        <img src="img/c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" alt="武汉图片"class="wuhan-img">
+        <img src="img/c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" alt="武汉图片"class="index-img">
     </main>
 </body>
 </html>
