--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>欢迎来到武汉</h2>
         <p>武汉是中国中部地区的重要城市，拥有丰富的历史、文化和美食。</p>
         <!-- 添加图片 -->
-        <img src="../img/04991d3e31a8d1299f26fb2ff9905d46.jpg" alt="武汉图片"class="index-img">
+        <img src="..\img\4991d3e31a8d1299f26fb2ff9905d46.jpg" alt="武汉图片"class="index-img">
     </main>
 </body>
 </html>
