--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
     <nav>
         <ul>
             <li><a href="web/about.html">武汉概况</a></li>
-            <li><a href="web/tourism.html">武汉旅游</a></li>
+            <li><a href="web/tourism.html">武汉旅游</a>
+              <figure>
+                <figcaption></figcaption>
+              </figure>
+            </li>
             <li><a href="web/food.html">武汉美食</a></li>
             <li><a href="web/culture.html">武汉文化</a></li>
         </ul>
     </nav>
-    <main>
+<main>
         <h2>欢迎来到武汉</h2>
-        <p>武汉是中国中部地区的重要城市，拥有丰富的历史、文化和美食。</p>
+  <p>武汉是中国中部地区的重要城市，拥有丰富的历史、文化和美食。身为一个武汉人，我为自己的家乡感到自豪。</p>
+    <p>
         <!-- 添加图片 -->
-        <img src="img/1733063586436.jpg" alt="武汉风景" class="index-img">
+        <img src="img/1733063586436.jpg" alt="武汉风景" width="491" class="index-img">
+  江城武汉</p>
     </main>
 </body>
 </html>
