--- a/web/about.html
+++ b/web/about.html
@@ -23,9 +23,9 @@
         武汉有着悠久的历史，可以追溯到3500多年前的商代。
         武汉是中国重要的文化中心之一，拥有丰富的文化遗产和历史遗迹。
         武汉是中国重要的教育中心，拥有多所知名大学，如武汉大学、华中科技大学等。</p>
-        <!-- 添加图片 -->
-        <img src="../img/04991d3e31a8d1299f26fb2ff9905d46.jpg" alt="武汉图片1">
-        <img src="../img/1733063586436.jpg" alt="武汉图片2">
+        <p><!-- 添加图片 --><img src="../img/04991d3e31a8d1299f26fb2ff9905d46.jpg" alt="武汉图片1" width="465">“天下第一楼”黄鹤楼</p>
     </main>
+<p>
+  <img src="file:///C|/Users/chenx/Documents/GitHub/kk4.github.io/img/c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" alt="武汉图片2" width="567" height="184">江滩夜景</p>
 </body>
 </html>
