--- a/web/food.html
+++ b/web/food.html
@@ -19,11 +19,11 @@
     </nav>
     <main>
         <h2>武汉美食</h2>
-        <p>武汉的美食以热干面、豆皮等为代表，口味独特。我最爱武汉小龙虾，武汉小龙虾的特点是麻辣鲜香，口感鲜美，肉质紧实，带有浓郁的调料香味。</p>
-        <!-- 添加图片 -->
-        <img src="../img/1733063622701.jpg" alt="武汉美食1">
-        <img src="../img/1733063626579.jpg" alt="武汉美食2">
-        <img src="../img/1733063633184.jpg" alt="武汉美食3">
+        <p>武汉的美食以热干面、豆皮等为代表，口味独特。我最爱武汉小龙虾，武汉小龙虾的特点是麻辣鲜香，口感鲜美，肉质紧实，带有浓郁的香味。</p>
+        <p><!-- 添加图片 -->
+        <img src="../img/1733063622701.jpg" alt="武汉美食1" width="436">
+    <img src="../img/1733063626579.jpg" alt="武汉美食2" width="298"><img src="../img/1733063633184.jpg" alt="武汉美食3" width="302">过早怎么能不吃豆皮</p>
+      <p>最爱小龙虾</p>
     </main>
 </body>
 </html>
