--- a/web/culture.html
+++ b/web/culture.html
@@ -19,11 +19,15 @@
     </nav>
     <main>
         <h2>武汉文化</h2>
-        <p>武汉有着深厚的历史文化底蕴，如楚文化、武汉话等。极富盛名的知音文化，以张之洞为代表的士人文化，以董必武为逮捕的革命文化，以·李四光为代表的科学家文化浸入这块土地。</p>
-        <!-- 添加图片 -->
-        <img src="../img/5e5690359eab4397a14d269dd696b2de.jpeg" alt="武汉文化1">
-        <img src="../img/81aa62afd8bc4d4ca379a684cdc6e80b.jpeg" alt="武汉文化2">
-        <img src="../img/a32030452d1b4765881bac5d8206a81b.jpeg" alt="武汉文化3">
+        <p>武汉有着深厚的历史文化底蕴，如楚文化、武汉话等。极富盛名的知音文化，以张之洞为代表的士人文化，以董必武为逮捕的革命文化，以·李四光为代表的科学家文化浸入这块土地。私以为，武汉的文化贵在一个”先“，我们敢于先行，”武汉每天不一样“等口号就是武汉进步精神的体现。</p>
+        <p><!-- 添加图片 -->
+          <img src="../img/5e5690359eab4397a14d269dd696b2de.jpeg" alt="武汉文化1">
+          <img src="../img/81aa62afd8bc4d4ca379a684cdc6e80b.jpeg" alt="武汉文化2">“洋务运动先驱“张之洞</p>
+      <p>“中国共产党创始人之一”董必武</p>
+      <figure>
+        <figcaption></figcaption>
+      </figure>
+      <p><img src="../img/a32030452d1b4765881bac5d8206a81b.jpeg" alt="武汉文化3">    中国地质力学奠基人李四光</p>
     </main>
 </body>
 </html>
