--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>武汉介绍</h1>
+        <h1>武汉介绍<img src="img/1733063586436.jpg" alt="武汉风景" width="1154" class="index-img"></h1>
     </header>
     <nav>
         <ul>
@@ -26,7 +26,6 @@
   <p>武汉是中国中部地区的重要城市，拥有丰富的历史、文化和美食。身为一个武汉人，我为自己的家乡感到自豪。</p>
     <p>
         <!-- 添加图片 -->
-        <img src="img/1733063586436.jpg" alt="武汉风景" width="491" class="index-img">
   江城武汉</p>
     </main>
 </body>
