--- a/web/tourism.html
+++ b/web/tourism.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>武汉旅游</h1>
+      <h1>武汉旅游</h1>
     </header>
     <nav>
         <ul>
@@ -26,9 +26,10 @@
             武汉长江大桥：中国第一座自行设计、施工的公铁两用桥，是武汉的标志性建筑之一。
             
             汉口江滩：位于汉口沿江大道，是武汉市民休闲娱乐的重要场所，夜景尤美。</p>
-        <!-- 添加图片 --><img src="file:///C|/Users/chenx/Documents/GitHub/kk4.github.io/img/c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" width="609" height="152" alt=""/>
+        <!-- 添加图片 -->
         
     最爱江滩坐船看灯光秀</main>
-<img src="1733232404501.jpg" width="604" height="304" alt=""/> 来武汉怎么能不逛江滩
+<img src="file:///C|/Users/chenx/Documents/GitHub/kk4.github.io/img/c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" width="596" height="253" alt=""/> 来武汉怎么能不逛江汉路<img src="1733232404501.jpg" width="596" height="304" alt=""/>
+<img src="file:///C|/Users/chenx/Documents/GitHub/kk4.github.io/img/04991d3e31a8d1299f26fb2ff9905d46.jpg" width="469" height="234" alt=""/>
 </body>
 </html>
