--- a/web/about.html
+++ b/web/about.html
@@ -25,7 +25,8 @@
         武汉是中国重要的教育中心，拥有多所知名大学，如武汉大学、华中科技大学等。</p>
         <p><!-- 添加图片 --><img src="../img/04991d3e31a8d1299f26fb2ff9905d46.jpg" alt="武汉图片1" width="465">“天下第一楼”黄鹤楼</p>
     </main>
+<img src="c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" width="500" height="277" alt=""/>
 <p>
-  <img src="file:///C|/Users/chenx/Documents/GitHub/kk4.github.io/img/c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" alt="武汉图片2" width="567" height="184">江滩夜景</p>
+  江滩夜景</p>
 </body>
 </html>
