--- a/web/tourism.html
+++ b/web/tourism.html
@@ -29,7 +29,6 @@
         <!-- 添加图片 -->
         
     最爱江滩坐船看灯光秀</main>
-<img src="file:///C|/Users/chenx/Documents/GitHub/kk4.github.io/img/c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" width="596" height="253" alt=""/> 来武汉怎么能不逛江汉路<img src="1733232404501.jpg" width="596" height="304" alt=""/>
-<img src="file:///C|/Users/chenx/Documents/GitHub/kk4.github.io/img/04991d3e31a8d1299f26fb2ff9905d46.jpg" width="469" height="234" alt=""/>
+<img src="1733232404501.jpg" width="596" height="304" alt=""/>来武汉怎么能不逛江汉路 <img src="file:///C|/Users/chenx/Documents/GitHub/kk4.github.io/img/04991d3e31a8d1299f26fb2ff9905d46.jpg" width="469" height="234" alt=""/>
 </body>
 </html>
