--- a/web/tourism.html
+++ b/web/tourism.html
@@ -29,6 +29,6 @@
         <!-- 添加图片 -->
         
     最爱江滩坐船看灯光秀</main>
-<img src="1733232404501.jpg" width="596" height="304" alt=""/>来武汉怎么能不逛江汉路 <img src="file:///C|/Users/chenx/Documents/GitHub/kk4.github.io/img/04991d3e31a8d1299f26fb2ff9905d46.jpg" width="469" height="234" alt=""/>
+<img src="1733232404501.jpg" width="596" height="304" alt=""/>来武汉怎么能不逛江汉路 
 </body>
 </html>
