--- a/web/tourism.html
+++ b/web/tourism.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li><a href="../index.html">主页</a></li>
-            <li><a href="../web/about.html">武汉概况</a></li>
+            <li><a href="../web/about.html">武汉概括&nbsp;</a></li>
             <li><a href="../web/food.html">武汉美食</a></li>
             <li><a href="../web/culture.html">武汉文化</a></li>
         </ul>
