--- a/index.html
+++ b/index.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <title>武汉介绍</title>
-    <link rel="stylesheet" href="web/style.css">
-</head>
-<body>
+<body background="web/c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" leftmargin="150" topmargin="150">
     <header>
-        <h1>武汉介绍<img src="img/1733063586436.jpg" alt="武汉风景" width="1154" class="index-img"></h1>
+        <h1>武汉介绍</h1>
+      <h2><a href="#">宿舍主页</a></h2>
     </header>
     <nav>
+        <main></main>
         <ul>
-            <li><a href="web/about.html">武汉概况</a></li>
-            <li><a href="web/tourism.html">武汉旅游</a>
-              <figure>
+            <li><a href="web/about.html">武汉概况</a><a href="web/tourism.html">
+                          武汉旅游 </a><a href="web/food.html">武汉美食</a><a href="web/culture.html"> 武汉文化</a>
+                          <figure>
                 <figcaption></figcaption>
               </figure>
             </li>
-            <li><a href="web/food.html">武汉美食</a></li>
-            <li><a href="web/culture.html">武汉文化</a></li>
-        </ul>
-    </nav>
+      </ul>
+</nav>
 <main>
         <h2>欢迎来到武汉</h2>
   <p>武汉是中国中部地区的重要城市，拥有丰富的历史、文化和美食。身为一个武汉人，我为自己的家乡感到自豪。</p>
     <p>
-        <!-- 添加图片 -->
-  江城武汉</p>
-    </main>
+        <!-- 添加图片 --></p>
+</main>
 </body>
 </html>
