--- a/web/about.html
+++ b/web/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>武汉概况</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body bgcolor="#1E12A0">
     <header>
         <h1>武汉概况</h1>
-    </header>
+</header>
     <nav>
         <ul>
             <li><a href="../index.html">主页</a></li>
@@ -19,7 +19,7 @@
     </nav>
     <main>
         <h2>武汉概况</h2>
-        <p>武汉是中国中部地区的重要城市，拥有丰富的历史、文化和美食。
+      <p>武汉是中国中部地区的重要城市，拥有丰富的历史、文化和美食。
         武汉有着悠久的历史，可以追溯到3500多年前的商代。
         武汉是中国重要的文化中心之一，拥有丰富的文化遗产和历史遗迹。
         武汉是中国重要的教育中心，拥有多所知名大学，如武汉大学、华中科技大学等。</p>
