--- a/web/culture.html
+++ b/web/culture.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>武汉文化</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body background="1733324557585.jpg">
     <header>
         <h1>武汉文化</h1>
     </header>
