--- a/web/tourism.html
+++ b/web/tourism.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>武汉旅游</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body bgcolor="#000000" background="file:///C|/Users/chenx/Documents/GitHub/kk4.github.io/img/04991d3e31a8d1299f26fb2ff9905d46.jpg">
     <header>
       <h1>武汉旅游</h1>
-    </header>
+</header>
     <nav>
         <ul>
             <li><a href="../index.html">主页</a></li>
@@ -17,7 +17,7 @@
             <li><a href="../web/culture.html">武汉文化</a></li>
         </ul>
     </nav>
-    <main>
+<main>
         <h2>武汉旅游</h2>
         <p>黄鹤楼：位于武昌蛇山，是中国著名的古建筑之一，享有“天下江山第一楼”的美誉。
 
@@ -30,5 +30,6 @@
         
     最爱江滩坐船看灯光秀</main>
 <img src="1733232404501.jpg" width="596" height="304" alt=""/>来武汉怎么能不逛江汉路 
+<img src="1733324031454.jpg" width="596" height="420" alt=""/>
 </body>
 </html>
