--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body background="web/c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" leftmargin="150" topmargin="150">
     <header>
         <h1>武汉介绍</h1>
-      <h2><a href="#">宿舍主页</a></h2>
+      <h2><a href="#https://chanyanyue.github.io/chanyanyue/dorm.html">宿舍主页</a></h2>
     </header>
     <nav>
         <main></main>
