--- a/web/culture.html
+++ b/web/culture.html
@@ -5,7 +5,7 @@
     <title>武汉文化</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body background="1733324557585.jpg">
+<body background="">
     <header>
         <h1>武汉文化</h1>
     </header>
