--- a/web/tourism.html
+++ b/web/tourism.html
@@ -5,7 +5,7 @@
     <title>武汉旅游</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body bgcolor="#000000" background="file:///C|/Users/chenx/Documents/GitHub/kk4.github.io/img/04991d3e31a8d1299f26fb2ff9905d46.jpg">
+<body bgcolor="#000000">
     <header>
       <h1>武汉旅游</h1>
 </header>
