--- a/web/food.html
+++ b/web/food.html
@@ -5,7 +5,7 @@
     <title>武汉美食</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body background="1733324362024.jpg">
+<body background="">
     <header>
         <h1>武汉美食</h1>
     </header>
