--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 body {
     background-repeat: no-repeat;
     background-image: url(web/c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+	background-size: cover;
 }
 </style>
+	 <link rel="stylesheet" href="style.css">
 <body leftmargin="150" topmargin="150">
     <header>
         <h1>武汉介绍</h1>
