--- a/web/about.html
+++ b/web/about.html
@@ -17,16 +17,18 @@
             <li><a href="../web/culture.html">武汉文化</a></li>
         </ul>
     </nav>
-    <main>
+<main>
         <h2>武汉概况</h2>
       <p>武汉是中国中部地区的重要城市，拥有丰富的历史、文化和美食。
         武汉有着悠久的历史，可以追溯到3500多年前的商代。
         武汉是中国重要的文化中心之一，拥有丰富的文化遗产和历史遗迹。
         武汉是中国重要的教育中心，拥有多所知名大学，如武汉大学、华中科技大学等。</p>
-        <p><!-- 添加图片 --><img src="../img/04991d3e31a8d1299f26fb2ff9905d46.jpg" alt="武汉图片1" width="465">“天下第一楼”黄鹤楼</p>
+        <p>
+          <!-- 添加图片 -->
+        <img src="../img/04991d3e31a8d1299f26fb2ff9905d46.jpg" alt="武汉图片1" width="465">
+        “天下第一楼”黄鹤楼<img src="c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" width="500" height="277" alt=""/>
+        <p>黄鹤楼代表武汉的文化，江滩代表武汉的繁华。武汉是九省通衢的中心之地，我们多元，我们从历史中来，我们又是最先迎合革命的城市之一。</p>
+        江滩</p>
     </main>
-<img src="c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" width="500" height="277" alt=""/>
-<p>
-  江滩夜景</p>
 </body>
 </html>
