--- a/web/tourism.html
+++ b/web/tourism.html
@@ -31,5 +31,6 @@
     最爱江滩坐船看灯光秀</main>
 <img src="1733232404501.jpg" width="596" height="304" alt=""/>来武汉怎么能不逛江汉路 
 <img src="1733324031454.jpg" width="596" height="420" alt=""/>
+江滩，长江大桥，江汉街。行完这三处地方，便可基本了解武汉的繁华。
 </body>
 </html>
