--- a/web/culture.html
+++ b/web/culture.html
@@ -12,9 +12,9 @@
     <nav>
         <ul>
             <li><a href="../index.html">主页</a></li>
-            <li><a href="../web/about.html">武汉概况</a></li>
-            <li><a href="../web/tourism.html">武汉旅游</a></li>
-            <li><a href="../web/food.html">武汉美食</a></li>
+            <li><a href="../img/about.html">武汉概况</a></li>
+            <li><a href="../img/tourism.html">武汉旅游</a></li>
+            <li><a href="../img/food.html">武汉美食</a></li>
         </ul>
     </nav>
     <main>
