--- a/web/about.html
+++ b/web/about.html
@@ -26,7 +26,7 @@
         <p>
           <!-- 添加图片 -->
         <img src="../img/04991d3e31a8d1299f26fb2ff9905d46.jpg" alt="武汉图片1" width="465">
-        “天下第一楼”黄鹤楼<img src="c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" width="500" height="277" alt=""/>
+        “天下第一楼”黄鹤楼<img src="../img/c7f5bbc3226968db85cb03e14a55eacf0dc2cc50_size1559.jpg" width="500" height="277" alt=""/>
         <p>黄鹤楼代表武汉的文化，江滩代表武汉的繁华。武汉是九省通衢的中心之地，我们多元，我们从历史中来，我们又是最先迎合革命的城市之一。</p>
         江滩</p>
     </main>
